# Setters

./: .gitignore  Platform.Setters.csproj  Platform.Setters.sln  README.html  README.md  SetterBase[TResult].cs  Setter[TResult, TDecision].cs  Setter[TResult].cs  index.html  index.json  manifest.json  run_cpp.sh  run_cpp_with_benchmarks.sh  run_with_tests.sh  setup.sh  toc.html  xrefmap.yml
api/: Platform.Setters.Setter-1.html  Platform.Setters.Setter-2.html  Platform.Setters.SetterBase-1.html  Platform.Setters.html  toc.html
cpp/: CMakeLists.txt  SetterTests.cpp  conanfile.py  conanfile.txt  install-local-conan-dependencies.sh  run_benchmarks.sh  run_tests.sh  run_with_benchmarks.sh
cpp/Platform.Setters/: Platform.Setters.TemplateLibrary.nuspec  Platform.Setters.h  SetterBase.h  SetterExtensions.h  Setter[TResult, TDecision].h  Setter[TResult].h
cpp/Platform.Setters.Benchmarks/: AllBenchmarks.cpp  SettersVsLambdasBenchmarks.cpp
cpp/Platform.Setters.Tests/: SetterExtensionsTests.cpp  SetterTests.cpp
csharp/: Platform.Setters.sln  README.html  index.html  index.json  manifest.json  toc.html  xrefmap.yml
csharp/Platform.Setters/: Platform.Setters.csproj  SetterBase.cs  SetterExtensions.cs  Setter[TResult, TDecision].cs  Setter[TResult].cs
csharp/Platform.Setters.Benchmarks/: LambdaVsSetterBenchmarks.cs  LambdaVsSetterVsLocalFunctionBenchmarks.cs  Platform.Setters.Benchmarks.csproj  Program.cs
csharp/Platform.Setters.Tests/: Platform.Setters.Tests.csproj  SetterTests.cs
csharp/api/: Platform.Setters.Setter-1.html  Platform.Setters.Setter-2.html  Platform.Setters.SetterBase-1.html  Platform.Setters.SetterExtensions.html  Platform.Setters.html  toc.html
